[package]
name = "nomic-delegators"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
orga = { git = "https://github.com/nomic-io/orga.git", branch="legacy-v1", features = ["merk-verify"] }
nomic = { git = "https://github.com/nomic-io/nomic.git", branch="testnet-legacy" }